moved token and channel whitelist to config file

--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "main": "index.js",
   "author": "Florian Lan",
   "license": "MIT",
+  "scripts": {
+    "start": "node bot.js"
+  },
   "dependencies": {
     "discord.js": "^12.5.1",
+    "fs": "^0.0.1-security",
     "node-fetch": "^2.6.1"
   }
 }
